   Make foreach_ptr_array() use an integer argument for its
   implementation, as this is more useful potentially than a gpointer*
   argument, and more straightforward.
   Add foreach_c_array(), foreach_ptr_array() to API.
 * src/utils.c, src/utils.h, src/document.c:
   Remove relative/untidy path elements when opening documents (closes
   #2823998).


2009-07-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c:
   Don't use the main window as parent for dialog boxes if it is not
   yet realised.
   Set titles for message dialogs.


2009-07-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/toolbar.c:
   Display item labels instead of raw names in the toolbar editor.
   Apply changes in the toolbar editor instantly.
   Show icons in the toolbar editor.
   Speed up toolbar editor dialog creation.
 * src/templates.c:
   Improve inserting of comment templates like File header or licence
   notices. The comment information are now read from the filetype
   configuration files.


2009-07-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Enable file monitoring for files which are written to disk by Geany
   for the first time.
 * src/filetypes.c:
   Fix broken special case handling when detecting filetypes from a
   shebang or other special file headers.


2009-07-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Make Mark All keybinding clear search highlighting when there's no
   current word.
 * src/search.c:
   Fix wrong match length when using Mark with regex.
 * src/geanyobject.c, src/geanyobject.h, src/treeviews.c,
   src/keyfile.c, src/main.c:
   Add 'Show Paths' documents list popup item.
   Add "load_settings" core-only signal emitted just after loading
   main keyfile settings; useful to delay building UI elements until
   settings have been read.
 * src/treeviews.c:
   Fix GTK warning when right-clicking on default tag tree.