@@ -325,8 +325,9 @@ static GtkTreeIter *get_doc_parent(GeanyDocument *doc)
 		gsize len = strlen(project_base_path);
 		const gchar *rest;
 
-		/* check whether the dir name uses the project base path */
-		setptr(project_base_path, g_strconcat(project_base_path, G_DIR_SEPARATOR_S, NULL));
+		/* check whether the dir name matches or uses the project base path */
+		if (!utils_str_equal(project_base_path, tmp_dirname))
+			setptr(project_base_path, g_strconcat(project_base_path, G_DIR_SEPARATOR_S, NULL));
 		if (g_str_has_prefix(tmp_dirname, project_base_path))
 		{
 			rest = tmp_dirname + len;
