@@ -13,6 +13,9 @@
  * src/utils.c, src/utils.h, src/document.c:
    Remove relative/untidy path elements when opening documents (closes
    #2823998).
+ * src/treeviews.c:
+   Fix showing project name for documents list files with no
+   subdirectory (oops).
 
 
 2009-07-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
